@@ -57,7 +57,6 @@ Resolves the relevant promise with C<@values>.
 
 has _values_queue => (is => 'ro', isa => ArrayRef, default => sub { [] });
 has _next_promise => (is => 'rw', isa => Maybe[Promise]);
-has pubsub => (is => 'lazy', builder => sub { GraphQL::PubSub->new });
 
 method publish(@values) {
   $self->_emit('resolve', \@values);
@@ -77,17 +76,12 @@ method _emit((Enum[qw(resolve reject)]) $method, $data) {
   if ($self->_exhausted) {
     die "Tried to emit to closed-off AsyncIterator\n";
   }
-  my $passon;
   if (my $next_promise = $self->_next_promise) {
     $next_promise->$method(ref $data eq 'ARRAY' ? @$data : $data);
-    $passon = $next_promise;
     $self->_next_promise(undef);
   } else {
-    $passon = $self->_thenify($self->_then, $self->_catch, $method, $data);
-    push @{$self->_values_queue},
-      { data => $passon, method => $method, processed => 1 };
+    push @{$self->_values_queue}, { data => $data, method => $method };
   }
-  $self->pubsub->publish(_emit => $method, $passon) if $self->{pubsub};
 }
 
 =head2 error(@values)
@@ -106,21 +100,21 @@ Returns either a L<GraphQL::Type::Library/Promise> of the next value,
 or C<undef> when closed off. Do not call this if a previous promised next
 value has not been settled, as a queue is not maintained.
 
+The promise will have each of the sets of handlers added by L</map_then>
+appended.
+
 =cut
 
 method next_p() :ReturnType(Maybe[Promise]) {
   return undef if $self->_exhausted and !@{$self->_values_queue};
   my $np;
-  my $value;
-  if (@{$self->_values_queue}) {
-    $value = shift @{$self->_values_queue};
+  if (my $value = shift @{$self->_values_queue}) {
     $np = $self->_promisify(@$value{qw(method data)});
   } else {
     $np = $self->_next_promise($self->promise_code->{new}->());
   }
-  (!$value or ($value and !$value->{processed}))
-    ? $self->_thenify($self->_then, $self->_catch, 'resolve', $np)
-    : $np;
+  $np = $self->_thenify(@$_, 'resolve', $np) for @{$self->_handler_frames};
+  $np;
 }
 
 =head2 close_tap
@@ -135,49 +129,24 @@ by L</next_p>.
 has _exhausted => (is => 'rw', isa => Bool, default => sub { 0 });
 
 method close_tap() :ReturnType(Maybe[Promise]) {
-  return if $self->_exhausted; # already done - no need to redo or propagate
+  return if $self->_exhausted; # already done - no need to redo
   $self->_exhausted(1);
-  $self->pubsub->publish(close_tap => ()) if $self->{pubsub};
 }
 
 =head2 map_then($then, $catch)
 
-Returns a new object, child of the current one, whose promises will
-have the supplied C<then> and C<catch> handlers attached to promises
-returned by L</next_p>.
-
-Values published to the parent object will get propagated to all children.
-If L</close_tap> is called on an object, that will get propagated to
-all parents and children - this allow a child iterator to be used to
-communicate the parent iterator should no longer receive values.
-
-If values have already been published into the current object but not
-read, they will be present in the child, being immediately processed by
-the handlers.
+Adds the handlers to this object's list of handlers, which will be
+attached to promises returned by L</next_p>. Returns self.
 
 =cut
 
-has _then => (is => 'ro', isa => Maybe[CodeLike]);
-has _catch => (is => 'ro', isa => Maybe[CodeLike]);
+has _handler_frames => (
+  is => 'ro', isa => ArrayRef[ArrayRef[CodeLike]], default => sub {[]},
+);
 
-method map_then(Maybe[CodeLike] $then, Maybe[CodeLike] $catch = undef) :ReturnType(InstanceOf[__PACKAGE__]) {
-  my @vq = map +{
-    method => 'resolve',
-    data => $self->_thenify($then, $catch, @$_{qw(method data)}),
-    processed => 1,
-  }, @{$self->_values_queue};
-  my $new = $self->new(
-    $then ? (_then => $then) : (),
-    $catch ? (_catch => $catch) : (),
-    _values_queue => \@vq,
-    promise_code => $self->promise_code,
-    _next_promise => $self->_next_promise,
-    _exhausted => $self->_exhausted,
-  );
-  $self->pubsub->subscribe(_emit => $new->curry::_emit);
-  $self->pubsub->subscribe(close_tap => $new->curry::close_tap);
-  $new->pubsub->subscribe(close_tap => $self->curry::close_tap);
-  $new;
+method map_then(Maybe[CodeLike] $then, Maybe[CodeLike] $catch = undef) {
+  push @{$self->_handler_frames}, [ $then, $catch ];
+  $self;
 }
 
 __PACKAGE__->meta->make_immutable();
